restyle add book modal

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     </div>
                     <button form="add-book-form" id="add-book-btn">Add Book</button>
                   </form>
+                  <img id="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
                 </dialog>
               </div>
             <div id="search-form-container">
