add empty bookcase styles

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         </fieldset>
       </div>
       <div id="bookcase">
+        <div id="bookcase-empty">
+          <p class="no-select">your bookcase is empty<span id="bookcase-empty-periods">...</span> read a book ♡</p>
+          <p class="no-select"><span class="add-symbol">⨭</span> Click to Add</p>
+        </div>
         <!-- injected via JS -->
       </div>
     </main>
