refactor empty bookcase styles & functionality

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </div>
                     <button form="add-book-form" id="add-book-btn">Add Book</button>
                   </form>
-                  <img id="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
+                  <img class="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
                 </dialog>
               </div>
             <div id="search-form-container">
@@ -102,10 +102,6 @@
         </fieldset>
       </div>
       <div id="bookcase">
-        <div id="bookcase-empty">
-          <p class="no-select">your bookcase is empty<span id="bookcase-empty-periods">...</span> read a book ♡</p>
-          <p class="no-select"><span class="add-symbol">⨭</span> Click to Add</p>
-        </div>
         <!-- injected via JS -->
       </div>
     </main>
@@ -251,5 +247,6 @@
       </section>
     </div>   
   </footer>
+  <img class="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
 </body>
 </html>
