fix cyclone logo overflow

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <script src="https://kit.fontawesome.com/24176ab973.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div id="cyclone-wrapper">
+    <img class="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
+  </div>
   <header>
     <div id="header-left">
       <h1 id="header-logo"><a href="#">bookCase</a></h1>
@@ -247,6 +250,5 @@
       </section>
     </div>   
   </footer>
-  <img class="cyclone-c-outline" src="assets/images/logos/cyclone-c-outline.svg" alt="Cyclone Studios™ Logo">
 </body>
 </html>
