add sort & local storage functionality

--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
               <label class="accessibility" for="sort">sort by:</label>
               <select name="sort" id="sort-select">
                 <option value="">Sort By</option>
-                <option value="read">read</option>
-                <option value="author-a-z">a-z (author)</option>
-                <option value="title-a-z">a-z (title)</option>
+                <option value="unread">unread</option>
+                <option value="author">a-z (author)</option>
+                <option value="title">a-z (title)</option>
                 <option value="pages"># of pages</option>
               </select>
             </div>
