fix search input tabbability, adjust search input states

--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 </dialog>
               </div>
             <div id="search-form-container">
-              <form id="search-form" action="">
+              <form id="search-form">
                 <label class="accessibility" for="search-input">Search:</label>
-                <input id="search-input" type="search" required>
-                <button id="search-submit-btn" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+                <input id="search-input" type="search"  name="search" required>
+                <button id="search-submit-btn" type="submit" form="search-form"><i class="fa-solid fa-magnifying-glass"></i></button>
                 <button id="search-close-btn" type="button">✖</button>
               </form>
             </div>
