add default bookcase sorting (date-added), uniform neuromorphism backgrounds & box shadows

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div id="controls-top">
             <div id="add-book-container">
                 <label class="accessibility" for="add-book">add new</label>
-                <button id="open-dialog-btn"><span id="add-book-text">+</span></button>
+                <button id="modal-open-btn"><span id="add-book-text">+</span></button>
                 <dialog id="add-book-modal">
                   <div id="top-modal">
                     <h3 id="modal-header">new book</h3>
