--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <title>bookCase</title>
   <link rel="icon" href="assets/images/logos/cyclone-favicon.gif" type="image/gif">
 	<link rel="stylesheet" href="css/cyclone-reset.css">
